--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section id="personal" class="grid__item grid__item--full">
                 <div class="flex">
                     <div class="flex__image"><img src="assets/images/avatar.png"
-                            alt="a smiling avatar of a girl with pigtails and glasses, hypnotized" width="270px">
+                            alt="a smiling avatar of a girl with pigtails and glasses, hypnotized" width="270">
                     </div>
                     <div class="flex__content">
                         <div class="grid grid--flexible">
@@ -160,107 +160,121 @@
             </section>
         </div>
         <section id="projects" class="grid grid--single">
+
             <div class="grid__item">
                 <h2>Projects</h2>
-                <p>* These are only my devChallenges projects. For more, please check out <a href="https://github.com/je-jo">my github profile.</a></p>
-                <div class="flex"><button class="btn btn--alt">HTML&CSS</button>
+                <p>* These are only my devChallenges projects. For more, please check out <a
+                        href="https://github.com/je-jo">my github profile.</a></p>
+                <div class="flex">
+                    <button class="btn btn--alt">HTML&CSS</button>
                     <button class="btn btn--alt">JavaScript</button>
                 </div>
 
             </div>
+            <ul id="paginated-list" aria-live="polite">
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/07-edie-homepage.png"
+                            alt="a screenshot of a homepage">
+                    </div>
+                    <div class="flex__content">
+                        <p>#JavaScript</p>
+                        <h3>07. Edie Homepage</h3>
+                        <p>A homepage with hamburger menu for mobile views and client form validation.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/edie-homepage/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/edie-homepage" class="btn btn--alt"
+                                target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/06-checkout-page.png"
+                            alt="a screenshot of a checkout page"></div>
+                    <div class="flex__content">
+                        <p>#JavaScript</p>
+                        <h3>06. Checkout Page</h3>
+                        <p>A checkout form with live calculations and client validation.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/checkout-page/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/checkout-page" class="btn btn--alt"
+                                target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/05-my-gallery.png"
+                            alt="a screenshot of a gallery page"></div>
+                    <div class="flex__content">
+                        <p>#HTML&CSS only</p>
+                        <h3>05. My Gallery</h3>
+                        <p>This one is all about grid.</p>
+                        <p>The pictures are clickable, and there's a nice hover effect.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-gallery/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/my-gallery" class="btn btn--alt" target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/04-recipe-page.png"
+                            alt="a screenshot of a recipe page"></div>
+                    <div class="flex__content">
+                        <p>#HTML&CSS only</p>
+                        <h3>04. Recipe Page</h3>
+                        <p>Practiced CSS Grid and reusable code.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/recipe-page/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/recipe-page" class="btn btn--alt" target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/03-interior-consultant.png"
+                            alt="a screenshot of a homepage"></div>
+                    <div class="flex__content">
+                        <p>#JavaScript</p>
+                        <h3>03. Interior Consultant</h3>
+                        <p>First time building hamburger menu.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/interior-consultant/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/interior-consultant" class="btn btn--alt"
+                                target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/02-my-team-page.png"
+                            alt="a screenshot of a team page">
+                    </div>
+                    <div class="flex__content">
+                        <p>#HTML&CSS only</p>
+                        <h3>02. My Team Page</h3>
+                        <p>Practicing placement with this fun layout.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-team-page/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/my-team-page" class="btn btn--alt"
+                                target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="grid__item flex">
+                    <div class="flex__image"><img src="assets/images/01-404.png" alt="a screenshot of a 404 page"></div>
+                    <div class="flex__content">
+                        <p>#HTML&CSS only</p>
+                        <h3>01. 404 Page</h3>
+                        <p>A simple starter project. First time converting actual Figma design to code.</p>
+                        <div class="flex flex-nowrap"><a href="https://je-jo.github.io/404-page/" class="btn"
+                                target="_blank">Demo</a>
+                            <a href="https://github.com/je-jo/404-page" class="btn btn--alt" target="_blank">Code</a>
+                        </div>
+                    </div>
+                </li>
 
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/07-edie-homepage.png" alt="a screenshot of a homepage">
-                </div>
-                <div class="flex__content">
-                    <p>#JavaScript</p>
-                    <h3>07. Edie Homepage</h3>
-                    <p>A homepage with hamburger menu for mobile views and client form validation.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/edie-homepage/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/edie-homepage" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
+            </ul>
+            <div id="container--pagination">
+ 
             </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/06-checkout-page.png"
-                        alt="a screenshot of a checkout page"></div>
-                <div class="flex__content">
-                    <p>#JavaScript</p>
-                    <h3>06. Checkout Page</h3>
-                    <p>A checkout form with live calculations and client validation.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/checkout-page/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/checkout-page" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/05-my-gallery.png"
-                        alt="a screenshot of a gallery page"></div>
-                <div class="flex__content">
-                    <p>#HTML&CSS only</p>
-                    <h3>05. My Gallery</h3>
-                    <p>This one is all about grid.</p>
-                    <p>The pictures are clickable, and there's a nice hover effect.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-gallery/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/my-gallery" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/04-recipe-page.png"
-                        alt="a screenshot of a recipe page"></div>
-                <div class="flex__content">
-                    <p>#HTML&CSS only</p>
-                    <h3>04. Recipe Page</h3>
-                    <p>Practiced CSS Grid and reusable code.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/recipe-page/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/recipe-page" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/03-interior-consultant.png"
-                        alt="a screenshot of a homepage"></div>
-                <div class="flex__content">
-                    <p>#JavaScript</p>
-                    <h3>03. Interior Consultant</h3>
-                    <p>First time building hamburger menu.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/interior-consultant/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/interior-consultant" class="btn btn--alt"
-                            target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/02-my-team-page.png" alt="a screenshot of a team page">
-                </div>
-                <div class="flex__content">
-                    <p>#HTML&CSS only</p>
-                    <h3>02. My Team Page</h3>
-                    <p>Practicing placement with this fun layout.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/my-team-page/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/my-team-page" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
-            <div class="grid__item flex">
-                <div class="flex__image"><img src="assets/images/01-404.png" alt="a screenshot of a 404 page"></div>
-                <div class="flex__content">
-                    <p>#HTML&CSS only</p>
-                    <h3>01. 404 Page</h3>
-                    <p>A simple starter project. First time converting actual Figma design to code.</p>
-                    <div class="flex flex-nowrap"><a href="https://je-jo.github.io/404-page/" class="btn"
-                            target="_blank">Demo</a>
-                        <a href="https://github.com/je-jo/404-page" class="btn btn--alt" target="_blank">Code</a>
-                    </div>
-                </div>
-            </div>
+
 
 
         </section>
