--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div>
                                 <address><span class="material-icons">
                                         email
-                                    </span>jejovicic@gmail.com</address>
+                                    </span>jelena@fakemail.com</address>
                                 <address><span class="material-icons">
                                         phone
                                     </span>
@@ -271,7 +271,7 @@
                 </li>
 
             </ul>
-            <div id="container--pagination">
+            <div id="pagination-container">
  
             </div>
 
