--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 <p>* These are only my devChallenges projects. For more, please check out <a
                         href="https://github.com/je-jo">my github profile.</a></p>
                 <div id="filters-container" class="flex">
-                    <button id="all" class="btn btn--alt">All</button>
-                    <button id="htmlcss" class="btn btn--alt">HTML&CSS</button>
-                    <button id="js" class="btn btn--alt">JavaScript</button>
+                    <button id="all" class="btn btn--pagination">All</button>
+                    <button id="htmlcss" class="btn btn--pagination">HTML&CSS</button>
+                    <button id="js" class="btn btn--pagination">JavaScript</button>
                 </div>
             </div>
             <ul id="paginated-list" aria-live="polite">
